# agentic-sql-poc

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml  test_queries.py
.claude/skills/release/: config.json
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  deploy-backend.yml  deploy-frontend.yml
.plans/: add-full-stack-educational-ui-with-live-pipeline-visualization.md  add-wizard-onboarding-flow-with-data-reference-drawer.md  agentic-sql-poc-local-text-to-sql-pipeline.md  improve-sql-generation-with-few-shot-examples-and-retry-logic.md  introduce-ground-truth-evaluation-mode-in-chat-ui.md  translate-wizard-ui-to-japanese.md
agent/: sql_agent.py
backend/: Dockerfile  README.md  pyproject.toml
backend/agent/: sql_agent.py
backend/app/: config.py  main.py  models.py
backend/app/agents/: llm.py  sql_agent.py
backend/app/data/evaluation/: evaluator.py  test_queries.json
backend/app/routers/: __init__.py  chat.py  etl.py  evaluation.py  schema.py
backend/data/processed/: area_pl.parquet  product_sales.parquet
backend/data/raw/: 商品別売上.xlsx
backend/scripts/: generate_dummy_data.py
backend/sql/: queries.py
backend/tests/: test_agent.py  test_app.py  test_etl.py  test_evaluator.py
data/raw/: エリア収支.xlsx
etl/: excel_to_parquet.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.setup.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatInput.tsx  DataReferenceDrawer.tsx  EvaluationSummaryBubble.tsx  QueryCard.tsx  QueryInterface.tsx  ScoringAnnotation.tsx
frontend/app/components/data/: DataReferencePanel.tsx
frontend/hooks/: useEvaluation.ts  useQuery.test.ts  useQuery.ts
frontend/lib/: api.test.ts  api.ts  constants.ts  types.ts
frontend/stores/: queryStore.test.ts  queryStore.ts  wizardStore.ts
scripts/: generate_dummy_data.py
sql/: schema.py
tests/: test_agent.py  test_etl.py
(+11 files in other folders)
