[project]
name = "sekisui-agentic-sql-poc"
version = "0.1.0"
description = "Local POC for Agentic Text-to-SQL over Japanese financial data"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "pyarrow>=15.0",
    "duckdb>=0.10",
    "ollama>=0.3",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["etl", "sql", "agent", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
